@@ -1,12 +1,9 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *     https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -14,33 +11,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  *
- * Authors: Stefan Irimescu, Can Berker Cikis
- *
+ * Contributor acknowledgements are maintained in the CONTRIBUTORS file at the project root.
  */
-
 package org.rumbledb.shell;
-
-import javassist.CannotCompileException;
-import org.apache.commons.io.IOUtils;
-import org.apache.spark.SparkException;
-import org.jline.reader.EndOfFileException;
-import org.jline.reader.LineReader;
-import org.jline.reader.LineReaderBuilder;
-import org.jline.reader.UserInterruptException;
-import org.jline.reader.impl.DefaultHighlighter;
-import org.jline.reader.impl.DefaultParser;
-import org.jline.terminal.Terminal;
-import org.jline.terminal.TerminalBuilder;
-import org.rumbledb.api.Item;
-import org.rumbledb.cli.JsoniqQueryExecutor;
-import org.rumbledb.cli.Main;
-import org.rumbledb.config.RumbleRuntimeConfiguration;
-import org.rumbledb.exceptions.OurBadException;
-import org.rumbledb.exceptions.RumbleException;
-import org.rumbledb.serialization.Serializer;
-import org.rumbledb.serialization.Serializers;
-
-import static org.jline.reader.LineReader.HISTORY_FILE;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -53,12 +26,37 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.apache.commons.io.IOUtils;
+import org.apache.spark.SparkException;
+import org.jline.reader.EndOfFileException;
+import org.jline.reader.LineReader;
+import org.jline.reader.LineReaderBuilder;
+import org.jline.reader.UserInterruptException;
+import org.jline.reader.impl.DefaultHighlighter;
+import org.jline.reader.impl.DefaultParser;
+import org.jline.terminal.Terminal;
+import org.jline.terminal.TerminalBuilder;
+
+import static org.jline.reader.LineReader.HISTORY_FILE;
+
+import org.rumbledb.api.Item;
+import org.rumbledb.bindings.ExternalBindings;
+import org.rumbledb.cli.ConsoleOutput;
+import org.rumbledb.cli.JsoniqQueryExecutor;
+import org.rumbledb.cli.Main;
+import org.rumbledb.config.RumbleConfiguration;
+import org.rumbledb.exceptions.OurBadException;
+import org.rumbledb.exceptions.RumbleException;
+import org.rumbledb.serialization.Serializer;
+import org.rumbledb.serialization.Serializers;
+
 public class RumbleJLineShell {
     private static final String EXIT_COMMAND = "exit";
     private static final String PROMPT = ANSIColor.CYAN + "RumbleDB$ " + ANSIColor.RESET;
     private static final String MID_QUERY_PROMPT = ">>> ";
     private final boolean printTime;
-    private final RumbleRuntimeConfiguration configuration;
+    private final RumbleConfiguration configuration;
+    private final ExternalBindings externalBindings;
     private LineReader lineReader;
     private JsoniqQueryExecutor jsoniqQueryExecutor;
     private boolean queryStarted;
@@ -66,8 +64,13 @@ public class RumbleJLineShell {
     private String currentQueryContent = "";
     private String welcomeMessage;
 
-    public RumbleJLineShell(RumbleRuntimeConfiguration configuration) throws IOException {
+    public RumbleJLineShell(RumbleConfiguration configuration) throws IOException {
+        this(configuration, ExternalBindings.empty());
+    }
+
+    public RumbleJLineShell(RumbleConfiguration configuration, ExternalBindings externalBindings) throws IOException {
         this.configuration = configuration;
+        this.externalBindings = externalBindings.snapshot();
         initialize();
         this.printTime = true;
     }
@@ -89,7 +92,7 @@ public class RumbleJLineShell {
                     }
                 }
             } catch (Exception ex) {
-                handleException(ex, this.configuration.getShowErrorInfo());
+                handleException(ex, this.configuration.debug().showErrorInfo());
             }
         }
     }
@@ -100,22 +103,18 @@ public class RumbleJLineShell {
         List<Item> results = new ArrayList<>();
         try {
             long count = this.jsoniqQueryExecutor.runInteractive(query, results);
-            Serializer serializer = Serializers.from(this.configuration.getSerializationParameters());
+            Serializer serializer = Serializers.from(this.configuration.output().serializationParameters());
             String result = String.join(
-                "\n",
-                results.stream()
-                    .map(x -> serializer.serialize(x))
-                    .collect(Collectors.toList())
-            );
-            String shell = this.configuration.getShellFilter();
+                    "\n", results.stream().map(x -> serializer.serialize(x)).collect(Collectors.toList()));
+            String shell = this.configuration.output().shellFilter();
             if (shell != null) {
-                Process process = Runtime.getRuntime().exec(shell);
+                Process process = new ProcessBuilder(shell.split("\\s+")).start();
                 BufferedReader stdout = new BufferedReader(new InputStreamReader(process.getInputStream()));
                 Writer stdin = new OutputStreamWriter(process.getOutputStream());
                 stdin.write(result);
                 stdin.flush();
                 stdin.close();
-                StringBuffer sb = new StringBuffer();
+                StringBuilder sb = new StringBuilder();
                 String s = stdout.readLine();
                 while (s != null) {
                     sb.append(s);
@@ -128,14 +127,15 @@ public class RumbleJLineShell {
             }
             output(result);
             if (count != -1) {
-                JsoniqQueryExecutor.issueMaterializationWarning(count, this.configuration.getResultSizeCap());
+                JsoniqQueryExecutor.issueMaterializationWarning(
+                        count, this.configuration.runtime().resultsSizeCap());
             }
             long time = System.currentTimeMillis() - startTime;
             if (this.printTime) {
                 output("The query took " + time + " milliseconds to execute.");
             }
         } catch (Exception ex) {
-            handleException(ex, this.configuration.getShowErrorInfo());
+            handleException(ex, this.configuration.debug().showErrorInfo());
         }
         this.queryStarted = false;
         this.currentQueryContent = "";
@@ -144,24 +144,20 @@ public class RumbleJLineShell {
     private void initialize() throws IOException {
         this.welcomeMessage = IOUtils.toString(Main.class.getResourceAsStream("/assets/banner.txt"), "UTF-8");
         this.welcomeMessage += "\n";
-        this.welcomeMessage += IOUtils.toString(
-            Main.class.getResourceAsStream("/assets/shell-instructions.txt"),
-            "UTF-8"
-        );
-        Terminal terminal = TerminalBuilder.builder()
-            .system(true)
-            .build();
+        this.welcomeMessage +=
+                IOUtils.toString(Main.class.getResourceAsStream("/assets/shell-instructions.txt"), "UTF-8");
+        Terminal terminal = TerminalBuilder.builder().system(true).build();
         DefaultParser parser = new DefaultParser();
         parser.setEscapeChars(null);
         this.lineReader = LineReaderBuilder.builder()
-            .parser(parser)
-            .terminal(terminal)
-            .variable(HISTORY_FILE, Paths.get(".rumble_shell_history"))
-            // .completer(new MyCompleter())
-            .highlighter(new DefaultHighlighter())
-            // .parser(new JiqsJlineParser())
-            .build();
-        this.jsoniqQueryExecutor = new JsoniqQueryExecutor(this.configuration);
+                .parser(parser)
+                .terminal(terminal)
+                .variable(HISTORY_FILE, Paths.get(".rumble_shell_history"))
+                // .completer(new MyCompleter())
+                .highlighter(new DefaultHighlighter())
+                // .parser(new JiqsJlineParser())
+                .build();
+        this.jsoniqQueryExecutor = new JsoniqQueryExecutor(this.configuration, this.externalBindings);
     }
 
     private void handleException(Throwable ex, boolean showErrorInfo) {
@@ -174,107 +170,81 @@ public class RumbleJLineShell {
                     handleException(sparkExceptionCause, showErrorInfo);
                 } else {
                     if (showErrorInfo) {
-                        ex.printStackTrace();
+                        ConsoleOutput.stackTrace(ex);
                     }
                     handleException(
-                        new OurBadException(
-                                "There was a problem with Spark, but Spark did not provide any cause or stracktrace. The message from Spark is:  "
-                                    + ex.getMessage()
-                        ),
-                        showErrorInfo
-                    );
+                            new OurBadException(
+                                    "There was a problem with Spark, but Spark did not provide any cause or stracktrace. The message from Spark is:  "
+                                            + ex.getMessage()),
+                            showErrorInfo);
                 }
             } else if (ex instanceof RumbleException && !(ex instanceof OurBadException)) {
-                System.err.println("⚠️  ️" + ex.getMessage());
+                ConsoleOutput.error("⚠️ " + ex.getMessage());
                 if (showErrorInfo) {
-                    ex.printStackTrace();
+                    ConsoleOutput.stackTrace(ex);
                 }
             } else if (ex instanceof OutOfMemoryError) {
-                System.err.println(
-                    "⚠️  Java went out of memory."
-                );
-                System.err.println(
-                    "If running locally, try adding --driver-memory 10G (or any quantity you need) between spark-submit and the RumbleDB jar in the command line to see if it fixes the problem. If running on a cluster, --executor-memory is the way to go."
-                );
+                ConsoleOutput.error(
+                        """
+                            ⚠️  Java went out of memory.
+                            If running locally, try adding --driver-memory 10G (or any quantity you need) between spark-submit and the RumbleDB jar in the command line to see if it fixes the problem. If running on a cluster, --executor-memory is the way to go.\
+                            """);
                 if (showErrorInfo) {
-                    ex.printStackTrace();
+                    ConsoleOutput.stackTrace(ex);
                 }
             } else if (ex instanceof IllegalArgumentException) {
-                System.err.println(
-                    "⚠️  There was an IllegalArgumentException. Most of the time, this happens because you are not using Java 8. Spark only works with Java 8."
-                );
-                System.err.println(
-                    "If you have several versions of java installed, you need to set your JAVA_HOME accordingly."
-                );
-                System.err.println("If you do not have Java 8 installed, we recommend installing AdoptOpenJDK 1.8.");
-                System.err.println(
-                    "For more debug info, please try again using --show-error-info yes in your command line."
-                );
+                ConsoleOutput.error(
+                        """
+                            ⚠️  There was an IllegalArgumentException. Most of the time, this happens because you are not using Java 8. Spark only works with Java 8.
+                            If you have several versions of java installed, you need to set your JAVA_HOME accordingly.
+                            If you do not have Java 8 installed, we recommend installing AdoptOpenJDK 1.8.
+                            For more debug info, please try again using --show-error-info yes in your command line.\
+                            """);
                 if (showErrorInfo) {
-                    ex.printStackTrace();
-                }
-            } else if (ex instanceof CannotCompileException) {
-                System.err.println("⚠️  There was a CannotCompileException.");
-                System.err.println(
-                    "There is a known issue with this on Docker and on certain versions of OpenJDK due to the JSONiter library."
-                );
-                System.err.println(
-                    "We have a workaround: please try again using --deactivate-jsoniter-streaming yes on your command line. json-doc() will, however, not be available."
-                );
-                System.err.println(
-                    "For more debug info, please try again using --show-error-info yes in your command line."
-                );
-                if (showErrorInfo) {
-                    ex.printStackTrace();
+                    ConsoleOutput.stackTrace(ex);
                 }
             } else if (ex instanceof ConnectException) {
-                System.err.println("⚠️  There was a problem with the connection to the cluster.");
-                System.err.println(
-                    "For more debug info including the exact exception and a stacktrace, please try again using --show-error-info yes in your command line."
-                );
+                ConsoleOutput.error(
+                        """
+                            ⚠️  There was a problem with the connection to the cluster.
+                            For more debug info including the exact exception and a stacktrace, please try again using --show-error-info yes in your command line.\
+                            """);
                 if (showErrorInfo) {
-                    ex.printStackTrace();
+                    ConsoleOutput.stackTrace(ex);
                 }
             } else if (ex instanceof NullPointerException) {
-                System.err.println(
-                    "Oh my oh my, we are very embarrassed, because there was a null pointer exception. 🙈"
-                );
-                System.err.println(
-                    "We would like to investigate this and make sure to fix it in a subsequent release. We would be very grateful if you could contact us or file an issue on GitHub with your query."
-                );
-                System.err.println("Link: https://github.com/RumbleDB/rumble/issues");
-                System.err.println(
-                    "For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line."
-                );
+                ConsoleOutput.error(
+                        """
+                            Oh my oh my, we are very embarrassed, because there was a null pointer exception. 🙈
+                            We would like to investigate this and make sure to fix it in a subsequent release. We would be very grateful if you could contact us or file an issue on GitHub with your query.
+                            Link: https://github.com/RumbleDB/rumble/issues
+                            For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line.\
+                            """);
                 if (showErrorInfo) {
-                    ex.printStackTrace();
+                    ConsoleOutput.stackTrace(ex);
                 }
             } else if (ex instanceof UserInterruptException) {
-                System.err.println(
-                    "On behalf of the RumbleDB team, I would like to thank you for querying with us and we are looking forward to having you with us again in the near future. Good bye!"
-                );
+                ConsoleOutput.error(
+                        "On behalf of the RumbleDB team, I would like to thank you for querying with us and we are looking forward to having you with us again in the near future. Good bye!");
                 System.exit(0);
             } else {
-                System.err.println(
-                    "We are very embarrassed, because an error has occured that we did not anticipate 🙈: "
-                        + ex.getMessage()
-                );
-                System.err.println(
-                    "We would like to investigate this and make sure to fix it. We would be very grateful if you could contact us or file an issue on GitHub with your query."
-                );
-                System.err.println("Link: https://github.com/RumbleDB/rumble/issues");
-                System.err.println(
-                    "For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line."
-                );
+                ConsoleOutput.error(
+                        """
+                            We are very embarrassed, because an error has occured that we did not anticipate 🙈: %s
+                            We would like to investigate this and make sure to fix it. We would be very grateful if you could contact us or file an issue on GitHub with your query.
+                            Link: https://github.com/RumbleDB/rumble/issues
+                            For more debug info (e.g., so you can communicate it to us), please try again using --show-error-info yes in your command line.\
+                            """
+                                .formatted(ex.getMessage()));
                 if (showErrorInfo) {
-                    ex.printStackTrace();
+                    ConsoleOutput.stackTrace(ex);
                 }
             }
         }
     }
 
     public void output(String message) {
-        System.err.println(ANSIColor.YELLOW + message + ANSIColor.RESET);
+        ConsoleOutput.error(ANSIColor.YELLOW + message + ANSIColor.RESET);
     }
 
     private String getPrompt() {
@@ -289,9 +259,7 @@ public class RumbleJLineShell {
     }
 
     private boolean isQueryEnd() {
-        return this.currentLine != null
-            && this.currentLine.equals("")
-            && !this.currentQueryContent.isEmpty();
+        return this.currentLine != null && this.currentLine.equals("") && !this.currentQueryContent.isEmpty();
     }
 
     private boolean isConfig() {
@@ -305,6 +273,4 @@ public class RumbleJLineShell {
     private String getInitializationMessage() {
         return this.welcomeMessage + "\n" + this.configuration.toString();
     }
-
-
 }
